# wishlist

./: Cargo.toml  README.adoc
.github/workflows/: rust-head.yaml
etc/: wishlist-update.service  wishlist-update.timer  wishlist.service
frontend/: index.html
frontend/js/: main.js
frontend/style/: style.css
src/: config.rs  data.rs  error.rs  main.rs  middle.rs  utils.rs  web.rs
src/store/: amazon.rs  epic.rs  mod.rs  playstation.rs  switch.rs
