[package]
name = "wishlist"
version = "0.1.0"
authors = ["MetroWind <chris.corsair@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
reqwest = ">=0.10"
tokio = ">=0.2"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
warp = ">=0.2"
log = ">=0.4"
stderrlog = ">=0.4"
clap = ">=2.33"
toml = ">=0.5"
