[package]
name = "wishlist"
version = "0.1.0"
authors = ["MetroWind <chris.corsair@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
reqwest = { version = ">=0.11", features = ["gzip", "brotli"] }
tokio = { version = ">=1.6", features = ["rt-multi-thread", "process"] }
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
warp = ">=0.2"
log = ">=0.4"
stderrlog = ">=0.4"
clap = ">=2.33"
toml = ">=0.5"
rusqlite = ">=0.25"
chrono = { version = ">=0.4", features = ["serde"] }
scraper = ">=0.12"
